@@ -15,6 +15,9 @@
   <div style="margin-bottom:5px" class="<%= 'recently_updated' if current_user.last_sign_in_at < comment.updated_at %>">
     <%= link_to comment.user.name, comment.user %>
     <span class="quiet small"><%= comment.friendly_date %></span>
+    <% if current_user.all_movable_comments.include?(comment) %>
+      <%= link_to image_tag('contour/open.png', :alt => ''), move_comment_path(comment) %>
+    <% end %>
     <% if current_user.all_deletable_comments.include?(comment) %>
       <%= link_to image_tag('contour/delete.png', :alt => ''), comment, :confirm => "Are you sure you want to delete Comment #{comment.name}?", :method => :delete %>
     <% end %>
