@@ -1,0 +1,2 @@
+<%= label :class_id, 'Object ID' %><br />
+<%= select_tag :class_id, options_for_select([['---', nil]] + @objects.collect{|i| [i.name, i.id]}) %>
