@@ -1,0 +1,33 @@
+<% @title = "Move Comment: #{@comment.name}" %>
+
+<% form_name = "comment_move_form" %>
+
+<%= form_tag move_update_comment_path(@comment), :method => :post, :id => form_name do %>
+  <fieldset>
+    <legend><%= @title %></legend>
+    
+    <div class="field">
+      <%= label :class_name, 'Object Type' %><br />
+      <%= select_tag :class_name, options_for_select(['Project', 'Sticky'].collect{|i| [i,i]}), :onchange => "$('#hidden_class_name').val($('#class_name').val());$('#object_select_form').submit();" %>
+    </div>
+    
+    <div class="field" id="object_selection"></div>
+  
+  </fieldset>
+  
+  <div class="actions">
+    <%= link_to_function image_tag('contour/tick.png', :alt => '') + "Move Comment", "$('##{form_name}').submit();", :class => "button positive" %>
+    <%= cancel %>
+  </div>
+<% end %>
+
+<%= form_tag object_select_comment_path(@comment), :method => :post, :remote => true, :id => "object_select_form" do %>
+  <%= hidden_field_tag :class_name, nil, :id => 'hidden_class_name' %>
+<% end %>
+
+<%= javascript_tag do %>
+  $(function(){
+    $('#hidden_class_name').val($('#class_name').val());
+    $('#object_select_form').submit();
+  });
+<% end %>
