@@ -1,0 +1,1 @@
+$("#object_selection").html("<%= escape_javascript(render("object_select")) %>");
