@@ -9,6 +9,11 @@ Notes::Application.routes.draw do
   resources :authentications, :controller => 'contour/authentications'
   
   resources :comments do
+    member do
+      get :move
+      post :move_update
+      post :object_select
+    end
     collection do
       get :search
       post :add_comment_table
