@@ -2,7 +2,9 @@
 
 * Enhancements
   * Emails are now sent for stickies when they are completed, can be disabled in user settings
-  * Owners who can edit a project or a sticky can now delete comments attached to the project or sticky
+  * Owners who can edit a project or a sticky can now
+    * delete comments attached to the project or sticky
+    * move comments to another between project or sticky
 
 == 0.7.3
 
